# codex-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  auth.py  cli.py  codex_page_client.py  config.py  docspayment-dispute-management-tickets.md  page.html  page2.html  pyproject.toml  record_demo.py  requirements.txt  ticket_implementation_runner.py
codex_cli/: __init__.py  _auth.py  _init_command.py  _session.py  _task_cache.py  cli.py  client.py  record_demo.py  ticket_runner.py
tests/: test_codex_page_client.py  test_ticket_implementation_runner.py
